# CookieCutter-ProyectoBasico

proyectocompletoejemplo/: Makefile  README.md  pyproject.toml
proyectocompletoejemplo/config/: main.yaml
proyectocompletoejemplo/config/process/: process1.yaml
proyectocompletoejemplo/models/: xgboost
proyectocompletoejemplo/notebooks/: prueba.ipynb
proyectocompletoejemplo/src/: evaluate_model.py  helper.py  main.py  process.py  train_model.py
